--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1617,10 +1617,11 @@ main {
             }
 
             @media (max-width: 991px) {
-                height: 480px;
+                background-image: url('../assets/img/contact_bottom_mobile.webp');
+                height: 400px;
                 width: 100%;
                 margin-top: 0px;
-                background-size: cover;
+                background-size: contain;
                 background-position: center center;
             }
 
@@ -1628,7 +1629,7 @@ main {
                 height: 290px;
                 width: 100%;
                 margin-top: 0px;
-                background-size: cover;
+                background-size: contain;
                 background-position: center center;
             }
         }
@@ -1700,8 +1701,7 @@ main {
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 750px;
-            max-height: 90vh;
+            width: auto;
 
 
             @media (max-width: 991px) {
