--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -835,6 +835,7 @@ main {
 
             @media (max-width: 1280px) {
                 height: 350px;
+                background-size: cover;
             }
 
             @media (min-width: 1920px) {
@@ -1551,6 +1552,8 @@ main {
         }
     }
 
+    &#com
+
     &#product_detail{
 
         #mid_right_shape {
@@ -1594,6 +1597,102 @@ main {
                 color: #fff;
                 padding: 30px 20px;
             }
+        }
+
+        .clickable-image {
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                background-color: rgba(39, 78, 128, 0.5);
+                transition: opacity 0.3s ease;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: transform 0.3s ease;
+            }
+
+            &:hover {
+                &::before {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(39, 78, 128, 0.9);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: auto;
+
+
+            @media (max-width: 991px) {
+                max-width: 100%;
+                max-height: 70vh;
+            }
+        }
+
+        .modal-image {
+            max-width: 750px;
+            max-height: 90vh;
+            object-fit: contain;
+        }
+
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 50px;
+            height: 50px;
+            background: none;
+            border: none;
+            color: #fff;
+            border: 2px solid #fff;
+            border-radius: 180%;
+            transform: translateX(100px);
+            font-size: 30px;
+            cursor: pointer;
+
+            @media (max-width: 991px) {
+                transform: translateX(0) translateY(-100px);
+            }
+        }
+
+        .fade-enter-active,
+        .fade-leave-active {
+            transition: opacity 0.3s;
+        }
+
+        .fade-enter-from,
+        .fade-leave-to {
+            opacity: 0;
         }
     }
 
