[modify] post finish

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1342,6 +1342,7 @@ main {
 
             img {
                 width: 100%;
+                height: auto;
             }
 
             .subtitle {
