--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -836,9 +836,11 @@ main {
 
             @media (max-width: 1280px) {
                 height: 350px;
-                background-size: cover;
             }
 
+            @media (max-width: 1600px) {
+                background-size: cover;
+            }
             @media (min-width: 1920px) {
                 background-size: contain;
             }
