[modify] product finish

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1213,6 +1213,11 @@ main {
                 width: auto;
                 display: inline-block;
                 font-size: 18px;
+
+
+                a{
+                    color: #fff !important;
+                }
             }
 
             .spec_tag_2{
@@ -1224,6 +1229,10 @@ main {
                 width: auto;
                 display: inline-block;
                 font-size: 18px;
+
+                a{
+                    color: #fff !important;
+                }
             }
 
             #mid_right_shape {
