--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -6,7 +6,7 @@
 html,
 body {
     /* 先套用 Noto Sans TC 這個 思源黑體 */
-    font-family: 'Noto Sans TC', 'Noto Sans JP', '微軟正黑體', sans-serif !important;
+    font-family: 'Noto Sans TC', 'Noto Sans SC', '微軟正黑體', sans-serif !important;
     padding: 0;
     margin: 0;
 }
