[modify] fixed height product image

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1188,6 +1188,10 @@ main {
                 color: #fff;
             }
 
+            .product_image{
+                height: 140px;
+            }
+
             hr{
                 border: none; 
                 border-top: 3px dotted #000;
