--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1706,6 +1706,11 @@ main {
             max-width: 750px;
             max-height: 90vh;
             object-fit: contain;
+
+            @media (max-width: 991px) {
+                max-width: 100%;
+                max-height: 60vh;
+            }
         }
 
         .close-button {
@@ -1723,7 +1728,7 @@ main {
             font-size: 30px;
             cursor: pointer;
 
-            @media (max-width: 991px) {
+            @media (max-width: 768px) {
                 transform: translateX(0) translateY(-100px);
             }
         }
