--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1658,6 +1658,10 @@ main {
             background-size: cover;
             background-position: bottom center;
 
+            @media (min-width: 1800px) {
+                height: 1500px;
+            }
+
             @media (max-width: 991px) {
                 height: 850px;
             }
@@ -1834,6 +1838,8 @@ main {
                 img{
                     margin-top: 0px !important;
                     width: 400px !important;
+                    margin-left: -550px;
+
                 }
             }
 
