[modify] update quality

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1034,6 +1034,9 @@ main {
 
             #quality-lab {
                 margin-bottom: 100px;
+                .clickable-image{
+                    border: 1px solid #000;
+                }
             }
 
             p {
